# hodgepodge

./: .coveragerc  .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
apps/account/: apis.py  serializers.py  tasks.py  utils.py
apps/account/tests/: test_apis.py  test_tasks.py
apps/audit/: apis.py  models.py  repositories.py  serializers.py  services.py  tasks.py
apps/audit/migrations/: 0001_initial.py
apps/audit/tests/: test_apis.py  test_repositories.py  test_services.py  test_tasks.py
apps/user/: apis.py  models.py  repositories.py  serializers.py  services.py
apps/user/migrations/: 0001_initial.py
apps/user/tests/: test_apis.py  test_repositories.py  test_services.py
common/auth/: authentication.py  permissions.py  tokens.py
common/auth/tests/: test_authentication.py  test_permissions.py
common/constants/: cache.py  regex.py
common/drf/: generics.py  viewsets.py
common/exceptions/: exception_handler.py
common/ipware/: __init__.py  ip.py  tests.py
common/middlewares/: logging.py  user_agent.py
common/models/: base.py
common/tests/: setup.py
common/utils/: header.py  json.py  random.py  timezone.py
common/utils/tests/: test_header.py  test_json.py  test_random.py  test_timezone.py
hodgepodge/: asgi.py  celery.py  env.py  routers.py  settings.py  urls.py  wsgi.py
scripts/: run_coverage.py
